# tetradka

./: .dockerignore  .env.example  .env.production.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
apps/bookings/: admin.py  filters.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/bookings/migrations/: 0001_initial.py  0002_booking_no_overlap_gist.py  0003_availabilityexception_uniq_availability_exception_tutor_date.py
apps/bookings/tests/: factories.py  test_api_availability.py  test_api_bookings.py  test_api_cancel.py  test_availability_expansion.py  test_completion.py  test_constraints.py  test_create_booking.py  test_free_slots.py  test_pending_timeout.py  test_status_machine.py
apps/catalog/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/catalog/migrations/: 0001_initial.py
apps/catalog/tests/: test_slots.py  test_subjects.py  test_tutor_profile.py  (+2 more)
apps/common/: migration_ops.py  models.py  permissions.py  views.py
apps/lessons/: admin.py  models.py
apps/notifications/: admin.py  models.py
apps/payments/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/processing/: admin.py  models.py
apps/users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
config/: api_urls.py  celery.py  urls.py
config/settings/: base.py  dev.py  prod.py  test.py
requirements/: base.txt  dev.txt
(+28 files in other folders)
